--- a/Index.html
+++ b/Index.html
@@ -94,9 +94,15 @@
                             <span>c++</span>
                             <span>80%</span>
                         </div>
-                        <div class="line js"></div>
+                       <div class="line js"></div>
                     </div>
-                        <div class="line mysql"></div>
+                        <div class="bars"></div>
+                        <div class="info">
+                            <span>html</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line js"></div>
+
                     </div>
                 </div>
             </div>
